...
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/profile_reset_input_pin"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/profile_reset_pin_activity_profile_reset_input_pin_margin_start"
          android:layout_marginTop="@dimen/profile_reset_pin_activity_profile_reset_input_pin_margin_top"
          android:layout_marginEnd="@dimen/profile_reset_pin_activity_profile_reset_input_pin_margin_end"
...
          app:errorMessage="@{viewModel.pinErrorMsg}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/profile_reset_pin_main">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_reset_input_pin_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="@{viewModel.isAdmin ? 5 : 3}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/profile_reset_input_confirm_pin"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/profile_reset_pin_activity_profile_reset_input_confirm_pin_margin_start"
          android:layout_marginTop="@dimen/profile_reset_pin_activity_profile_reset_input_confirm_pin_margin_top"
          android:layout_marginEnd="@dimen/profile_reset_pin_activity_profile_reset_input_confirm_pin_margin_end"
...
          app:errorMessage="@{viewModel.confirmErrorMsg}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/profile_reset_input_pin">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_reset_input_confirm_pin_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="@{viewModel.isAdmin ? 5 : 3}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/profile_reset_save_button"
          style="@style/StateButtonActive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="@dimen/profile_reset_pin_activity_profile_reset_save_button_margin_end"
          android:layout_marginBottom="24dp"
...
