...
  <string name="add_profile_error_name_not_unique">This name is already in use by another profile.</string>
  <string name="add_profile_error_name_empty">Please enter a valid name for this profile.</string>
  <string name="add_profile_error_name_only_letters">Please choose a profile name that doesn\'t include numbers or symbols.</string>
  <string name="add_profile_error_missing_profile_type">Profile type unknown.</string>
  <string name="add_profile_default_error_message">An error occurred while creating a profile.</string>
  <string name="add_profile_error_pin_length">Your PIN should be 3 digits long.</string>
  <string name="add_profile_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="add_profile_info_content_description">More information on 3-digit PINs.</string>
  <string name="current_profile_picture_content_description">Current profile picture</string>
  <string name="edit_profile_picture_content_description">Edit profile picture</string>
  <!-- OnboardingActivity -->
  <string name="onboarding_slide_0_title">Welcome to %s!</string>
  <string name="onboarding_slide_0_description">Learn anything you want in an effective and enjoyable way.</string>
...
  <string name="profile_reset_pin_activity_title">Reset PIN</string>
  <string name="profile_reset_pin_main">Enter a new PIN for the user to enter when accessing their profile.</string>
  <string name="profile_reset_pin_user_pin_label">3-Digit PIN</string>
  <string name="profile_reset_pin_admin_pin_label">5-Digit PIN</string>
  <string name="profile_reset_pin_user_confirm_label">Confirm 3-Digit PIN</string>
  <string name="profile_reset_pin_admin_confirm_label">Confirm 5-Digit PIN</string>
  <string name="profile_reset_pin_error_user_pin_length">Your PIN should be 3 digits long.</string>
  <string name="profile_reset_pin_error_admin_pin_length">Your PIN should be 5 digits long.</string>
  <string name="add_profile_create_a_3_digit_pin">Create a 3-Digit PIN</string>
  <string name="add_profile_required">Required</string>
  <string name="back_button">Back Button</string>
  <string name="next">Next</string>
  <!-- ProfileAndDeviceIDsActivity -->
  <string name="learner_analytics_label_text">Learner Study Analytics</string>
...
